[package]
name = "nitro_sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Uses rustls to avoid system library dependency errors
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
serde_json = "1.0"
warp = "0.3"
